tests/NormalTests/paczka1/small_fuzzy/17691689.err
Error in line 4: 31Qh9l A989 89,0
Error in line 12: mZvnqgfxT0U A989 19,6
